--- a/styles.css
+++ b/styles.css
@@ -115,10 +115,10 @@ html {
     margin-top: 15px;
     padding: 10px;
     border-radius: 5px;
-    border: 2px solid rgba(255,255,255,0.6);
+    border: 2px solid rgba(218, 212, 212, 0.6);
     font-size: 1rem;
     background-color: rgba(255, 255, 255, 0.2);
-    color: #fff;
+    color: #9cd0e5;
     backdrop-filter: blur(5px);
     cursor: pointer;
     outline: none;
